Fixed button z-index for code boxes

--- a/wcfsetup/install/files/style/bbcode/code.scss
+++ b/wcfsetup/install/files/style/bbcode/code.scss
@@ -42,6 +42,7 @@
 			padding-bottom: 10px;
 			position: absolute;
 			right: 0;
+			z-index: 1;
 		}
 	}
 	
